_includes/examples/b2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: b2
  name: b2
spec:
  containers:
  - args:
    - sh
    - -c
    - sleep 3600
    image: busybox
    name: b2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
