_includes/examples/emptydir-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-emptydir
  namespace: jmcf
spec:
  volumes:
    - name: logs
      emptyDir: {}
  containers:
    - name: app-container
      image: alpine
      command: ["/bin/sh"]
      args: ["-c", "while true; do date >> /var/log/app.txt; sleep 5; done"]
      volumeMounts:
        - name: logs
          mountPath: /var/log
