_includes/examples/pod-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
 labels:
   run: my-pod
 name: my-pod
 namespace: jmcf
spec:
 containers:
 - image: nginx
   ports:
     - name: p1
       containerPort: 80
   name: my-pod
   livenessProbe:
     initialDelaySeconds: 3
     httpGet:
       port: "p1"
       path: "/"
 dnsPolicy: ClusterFirst
 restartPolicy: Always
