_includes/examples/pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
 labels:
   run: my-pod
 name: my-pod
 namespace: jmcf
spec:
 containers:
 - image: nginx
   ports:
     - name: p1
       containerPort: 80
   name: my-pod
   resources:
     limits:
       cpu: 200m
       memory: 50Mi
     requests:
       cpu: 50m
       memory: 10Mi
 dnsPolicy: ClusterFirst
 restartPolicy: Always
status: {}
