_includes/examples/pod-sa.yaml
apiVersion: v1
kind: Pod
metadata:
 labels:
   run: my-pod
 name: my-pod
 namespace: jmcf
spec:
 serviceAccountName: sca1
 containers:
 - image: busybox
   name: my-pod
   command: ["sh", "-c"]
   args: ["sleep 3600"]
 dnsPolicy: ClusterFirst
 restartPolicy: Always
status: {}
