_includes/examples/pod-security-context.yaml
apiVersion: v1
kind: Pod
metadata:
 labels:
   run: my-pod
 name: my-pod
 namespace: jmcf
spec:
 containers:
 - image: busybox
   name: my-pod
   command: ["sh", "-c"]
   args: ["while true; do echo \"hello!\"; sleep 5; done"]
   securityContext:
     runAsUser:  101
     runAsGroup: 101
 dnsPolicy: ClusterFirst
 restartPolicy: Always
