_includes/examples/secret-env-var.yaml
apiVersion: v1
kind: Pod
metadata:
 labels:
   run: my-pod
 name: my-pod
 namespace: jmcf
spec:
 containers:
 - image: nginx
   ports:
     - name: p1
       containerPort: 80
   name: my-pod
 dnsPolicy: ClusterFirst
 restartPolicy: Always
status: {}
