_includes/examples/secret-volume-item.yaml
apiVersion: v1
kind: Pod
metadata:
 labels:
   run: my-pod
 name: my-pod
 namespace: jmcf
spec:
 volumes:
   - name: v1
     secret:
       secretName: s1
       items:
        - key: username
          path: "credentials/username.conf"
       optional: false
 containers:
 - image: busybox
   command: ["sh", "-c"]
   args: ["sleep 3600"]
   name: my-pod
   resources: {}
   volumeMounts:
     - name: v1
       mountPath: "/etc/foo"
 dnsPolicy: ClusterFirst
 restartPolicy: Always
