_includes/examples/secret-volume.yaml
apiVersion: v1
kind: Pod
metadata:
 labels:
   run: my-pod
 name: my-pod
 namespace: jmcf
spec:
 volumes:
   - name: v1
     secret:
       secretName: s1
       optional: false
 containers:
 - image: nginx
   ports:
     - name: p1
       containerPort: 80
   name: my-pod
   resources: {}
   volumeMounts:
     - name: v1
       mountPath: "/etc/foo"
 dnsPolicy: ClusterFirst
 restartPolicy: Always
