_includes/examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ex1
  name: my-service
  namespace: jmcf
spec:
  clusterIP: None
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ex1
  type: ClusterIP
